# sonora

./: .gitignore  .gitmodules  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  Cross.toml  Makefile.toml  README.md  codecov.yml
.github/workflows/: bench.yml  ci.yml  coverage.yml  cpp-validation.yml  fuzz.yml
crates/sonora/: Cargo.toml  LICENSE  README.md  build.rs  cbindgen.toml
crates/sonora-aec3/: Cargo.toml  README.md
crates/sonora-aec3/src/: adaptive_fir_filter.rs  adaptive_fir_filter_erl.rs  aec3_fft.rs  aec_state.rs  alignment_mixer.rs  api_call_jitter_metrics.rs  block.rs  block_buffer.rs  block_framer.rs  block_processor.rs  block_processor_metrics.rs  cascaded_biquad_filter.rs  circular_buffer.rs  clockdrift_detector.rs  coarse_filter_update_gain.rs  comfort_noise_generator.rs  common.rs  config.rs  decimator.rs  downsampled_render_buffer.rs  echo_audibility.rs  echo_path_delay_estimator.rs  echo_remover.rs  echo_remover_metrics.rs  erl_estimator.rs  erle_estimator.rs  fft_buffer.rs  fft_data.rs  filter_analyzer.rs  frame_blocker.rs  fullband_erle_estimator.rs  lib.rs  matched_filter.rs  matched_filter_lag_aggregator.rs  moving_average.rs  multi_channel_content_detector.rs  nearend_detector.rs  refined_filter_update_gain.rs  render_buffer.rs  render_delay_buffer.rs  (+19 more)
crates/sonora-aec3/src/matched_filter/: avx2.rs  neon.rs  sse2.rs
crates/sonora-agc2/: Cargo.toml  README.md
crates/sonora-agc2/src/: adaptive_digital_gain_controller.rs  biquad_filter.rs  clipping_predictor.rs  clipping_predictor_level_buffer.rs  common.rs  fixed_digital_level_estimator.rs  gain_applier.rs  interpolated_gain_curve.rs  lib.rs  limiter.rs  limiter_db_gain_curve.rs  noise_level_estimator.rs  rnn_vad.rs  saturation_protector.rs  saturation_protector_buffer.rs  speech_level_estimator.rs  vad_wrapper.rs
crates/sonora-agc2/src/rnn_vad/: activations.rs  auto_correlation.rs  common.rs  fc_layer.rs  features_extraction.rs  gru_layer.rs  lp_residual.rs  pitch_search.rs  pitch_search_internal.rs  ring_buffer.rs  rnn.rs  sequence_buffer.rs  spectral_features.rs  spectral_features_internal.rs  symmetric_matrix_buffer.rs  vector_math.rs  weights.rs
crates/sonora-bench/: Cargo.toml
crates/sonora-bench/benches/: cpp_comparison.rs
crates/sonora-bench/src/: lib.rs
crates/sonora-bench/tests/: cpp_comparison.rs  ns_cpp_comparison.rs
crates/sonora-common-audio/: Cargo.toml  README.md
crates/sonora-common-audio/src/: audio_util.rs  cascaded_biquad_filter.rs  channel_buffer.rs  lib.rs  push_resampler.rs  push_sinc_resampler.rs  sinc_resampler.rs
crates/sonora-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/sonora-ffi/include/: wap_audio_processing.h
crates/sonora-ffi/src/: conversions.rs  functions.rs  lib.rs  panic_guard.rs  types.rs
crates/sonora-fft/: Cargo.toml  README.md
crates/sonora-fft/src/: fft4g.rs  lib.rs  ooura_fft.rs  ooura_fft_neon.rs  ooura_fft_sse2.rs  pffft.rs
crates/sonora-ns/: Cargo.toml  README.md
crates/sonora-ns/src/: config.rs  fast_math.rs  histograms.rs  lib.rs  noise_estimator.rs  noise_suppressor.rs  ns_fft.rs  prior_signal_model.rs  prior_signal_model_estimator.rs  quantile_noise_estimator.rs  signal_model.rs  signal_model_estimator.rs  speech_probability_estimator.rs  suppression_params.rs  wiener_filter.rs
crates/sonora-ns/tests/: cpp_comparison.rs
crates/sonora-proptest/: Cargo.toml  README.md
crates/sonora-proptest/src/: comparison.rs  lib.rs
crates/sonora-simd/: Cargo.toml  README.md
crates/sonora-simd/src/: avx2.rs  lib.rs  neon.rs  sse2.rs
crates/sonora-sys/: Cargo.toml  README.md  build.rs
crates/sonora-sys/cpp/: shim.cc  shim.h
crates/sonora-sys/src/: bridge.rs  lib.rs
crates/sonora/benches/: cpp_comparison.rs  pipeline.rs
crates/sonora/examples/: common.rs  karaoke.rs  recording.rs  simple.rs
crates/sonora/include/: wap_audio_processing.h
crates/sonora/src/: audio_buffer.rs  audio_converter.rs  audio_processing.rs  audio_processing_impl.rs  audio_samples_scaler.rs  capture_levels_adjuster.rs  config.rs  config_selector.rs  echo_canceller3.rs  ffi.rs  gain_controller2.rs  high_pass_filter.rs  input_volume_controller.rs  lib.rs  residual_echo_detector.rs  rms_level.rs  splitting_filter.rs  stats.rs  stream_config.rs  submodule_states.rs  swap_queue.rs  three_band_filter_bank.rs
crates/sonora/src/echo_detector/: circular_buffer.rs  mean_variance_estimator.rs  moving_max.rs  normalized_covariance_estimator.rs
crates/sonora/src/ffi/: conversions.rs  functions.rs  types.rs
crates/sonora/tests/: cpp_comparison.rs
docs/: rust_api_review_plan.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: c_api.rs  config_changes.rs  process_stream.rs
