[workspace]
resolver = "3"
exclude = ["cpp", "fuzz"]
members = [
    "crates/sonora",
    "crates/sonora-sys",
    "crates/sonora-common-audio",
    "crates/sonora-aec3",
    "crates/sonora-agc2",
    "crates/sonora-ns",
    "crates/sonora-simd",
    "crates/sonora-fft",
    "crates/sonora-proptest",
]

[workspace.package]
edition = "2024"
rust-version = "1.91"
license = "BSD-3-Clause"
repository = "https://github.com/dignifiedquire/sonora"

[workspace.dependencies]
# Internal crates
sonora = { path = "crates/sonora" }
sonora-sys = { path = "crates/sonora-sys" }
sonora-common-audio = { path = "crates/sonora-common-audio" }
sonora-aec3 = { path = "crates/sonora-aec3" }
sonora-agc2 = { path = "crates/sonora-agc2" }
sonora-ns = { path = "crates/sonora-ns" }
sonora-simd = { path = "crates/sonora-simd" }
sonora-fft = { path = "crates/sonora-fft" }
sonora-proptest = { path = "crates/sonora-proptest" }

# External dependencies
cpufeatures = "0.3"
derive_more = { version = "2", features = ["debug"] }
tracing = "0.1"
bytemuck = { version = "1", features = ["derive"] }
proptest = "1.9"
test-strategy = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[workspace.lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ["cfg(docsrs)"] }
elided_lifetimes_in_paths = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
or_fun_call = "warn"
use_self = "warn"
unused_async = "warn"
absolute_paths = "warn"
manual_let_else = "warn"
allow_attributes_without_reason = "warn"
mod_module_files = "deny"
