[package]
name = "sonora-aec3"
version = "0.1.0"
description = "Echo Canceller 3 (AEC3) — Rust port of WebRTC's modern echo canceller"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sonora-common-audio = { workspace = true }
sonora-fft = { workspace = true }
sonora-simd = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
test-strategy = { workspace = true }

[lints]
workspace = true
