[package]
name = "sonora-agc2"
version = "0.1.0"
description = "Automatic Gain Control 2 (AGC2) with RNN VAD for WebRTC Audio Processing"
keywords = ["webrtc", "audio", "agc", "gain-control", "vad"]
categories = ["multimedia::audio"]
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sonora-common-audio = { workspace = true }
sonora-fft = { workspace = true }
sonora-simd = { workspace = true }
bytemuck = { workspace = true }
derive_more = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
test-strategy = { workspace = true }
