[package]
name = "sonora-common-audio"
version = "0.1.0"
description = "DSP primitives for WebRTC Audio Processing (resamplers, filters, FFT)"
keywords = ["dsp", "audio", "fir-filter", "resampler", "fft"]
categories = ["multimedia::audio", "science"]
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
derive_more = { workspace = true }
sonora-simd = { workspace = true }
tracing = { workspace = true }
