[package]
name = "sonora-ns"
version = "0.1.0"
description = "Noise Suppression for WebRTC Audio Processing"
keywords = ["webrtc", "audio", "noise-suppression", "denoising"]
categories = ["multimedia::audio"]
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
cpp-comparison = ["dep:sonora-sys"]

[dependencies]
sonora-fft = { workspace = true }
tracing = { workspace = true }
sonora-sys = { workspace = true, features = ["cxx-bridge"], optional = true }

[dev-dependencies]
proptest = { workspace = true }
test-strategy = { workspace = true }
sonora-proptest = { workspace = true }
