[package]
name = "sonora-simd"
version = "0.1.0"
description = "SIMD abstraction layer for WebRTC Audio Processing"
keywords = ["simd", "sse2", "avx2", "neon"]
categories = ["hardware-support"]
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
cpufeatures = { workspace = true }

[lints]
workspace = true
